# bb-utils

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  decoder-example.cpp
source/: CMakeLists.txt
source/bb/: array.h  assert.h  basic-types-limits.h  basic-types-utils.h  basic-types.h  byte-utils.h  byte.h  callable.h  casting-utils.h  clamped.h  constexpr-utils.h  duration.h  new.h  noexcept-utils.h  on-scope-exit.h  optional.h  restricted.h  span.h  temperature.h  type-utils.h  variant.h  version.h.in
test/: CMakeLists.txt  array-tests.cpp  basic-types-tests.cpp  byte-tests.cpp  byte-utils-tests.cpp  callable-tests.cpp  casting-utils-tests.cpp  constexpr-utils-tests.cpp  duration-tests.cpp  noexcept-utils-tests.cpp  on-scope-exit-tests.cpp  optional-tests.cpp  span-tests.cpp  temperature-tests.cpp  type-utils-tests.cpp  variant-tests.cpp
test/utils/: dummy-structs.h  dynamic-assert.h
