function(add_new_test TEST_NAME)
  add_executable( ${TEST_NAME} ${TEST_NAME}.cpp )
  target_link_libraries( ${TEST_NAME} PRIVATE bb )
  add_test( NAME ${TEST_NAME} COMMAND ${TEST_NAME} )
endfunction()

add_new_test( array-tests )
add_new_test( basic-types-tests )
add_new_test( byte-tests )
add_new_test( byte-utils-tests )
add_new_test( callable-tests )
add_new_test( constexpr-utils-tests )
add_new_test( duration-tests )
add_new_test( noexcept-utils-tests )
add_new_test( on-scope-exit-tests )
add_new_test( optional-tests )
add_new_test( span-tests )
add_new_test( temperature-tests )
add_new_test( type-utils-tests )
add_new_test( variant-tests )
